# steam-vpk

./: .editorconfig  .eslintignore  .eslintrc-steamvpk.yml  .eslintrc.yml  .gitignore  .gitmodules  .prettierignore  .prettierrc.yml  .ts-for-girrc.js  AUTHORS.md  CHANGELOG.md  README.md  ROADMAP.md  com.github.kinten108101.SteamVpk.yml  esbuild.js  meson.build  meson_options.txt  package.json  steam-vpk.doap  stvpk.doap  tsconfig.alias.json  tsconfig.json
build-node-env/: meson.build  package.json.in  tsconfig.json.in  yarn.lock.in
data/: addonbox.desktop.in  com.github.kinten108101.SteamVPK.data.xml.in  com.github.kinten108101.SteamVPK.desktop  com.github.kinten108101.SteamVPK.metainfo.xml  com.github.kinten108101.SteamVpk.data.gresource.xml  com.github.kinten108101.SteamVpk.gschema.xml  meson.build  resource.data.gresource.xml.in  resource.gschema.xml  resource.gschema.xml.in  steam-vpk.data.gresource.xml.in  style-dark.css  style.css
data/css/: style.css
data/gtk/: help-overlay.blp  menus.blp
data/icons/: meson.build
data/mockups/src/: adwaita-pattern.sketch  myso.sketch
data/resources/logo/: meson.build
data/resources/workbench/: README.md  add-addon-v2.blp  add-addon-v2.css  add-addon-v2.js  addon-details-v2.blp  addon-details-v3.blp  addon-details-v3.css  addon-details.blp  addon-details.css  addon-details.js  boxedlist.blp  boxedlist.js  d-box.blp  d-box.css  download-page.blp  download-page.css  download-window.blp  headerbox.blp  headerbox.css  headerbox.js  inject-page.blp  inject-page.css  launchpad-v2.blp  launchpad-v2.css  listview.blp  listview.js  probile-bar.css  (+8 more)
data/ui/: _addon-details-window.blp  add-addon-manual.blp  add-addon-name.blp  add-addon-preview-download.blp  add-addon-preview-local.blp  add-addon-preview.blp  add-addon-url-input-url.blp  add-addon-url-preview-download.blp  add-addon-url.blp  add-addon.blp  addon-details-archive-list-row.blp  addon-details-context-label.blp  addon-details-lozenge.blp  addon-details-peek-file.blp  addon-details.blp  addonlist-list-box.blp  addonlist-page.blp  addonlist-row.blp  addonlist-section.blp  addons-panel-disk-allocate.blp  addons-panel-disk.blp  addons-panel.blp  create-profile.blp  debug-window-action-row.blp  debug-window.blp  download-page-row.blp  download-page.blp  download-row.blp  download-window-row.blp  download-window.blp  dsf  field-row.blp  headerbox-build.blp  headerbox-console.blp  headerbox-detachable.blp  headerbox.blp  inject-button-set.blp  inject-console.blp  launchpad-config.blp  launchpad-page.blp  (+18 more)
src/: about.ts  actions.ts  add-addon-window.ts  add-addon.ts  addon-action.ts  addon-details-archive-list.ts  addon-details-leaflet-page.ts  addon-details-page.ts  addon-details-present.ts  addon-details-update.ts  addon-details.ts  addon-manager.ts  addon-model.ts  addon-schema.ts  addon-storage-controls.ts  addon-storage.ts  addonlist-model.ts  addonlist-page.ts  addonlist-widget.ts  addonlist-widgets.ts  addonlist.ts  addons-panel-actions.ts  addons-panel.ts  addons.ts  api.ts  application.js  application.ts  archive-controls.ts  archive.ts  com.github.kinten108101.SteamVPK.js  com.github.kinten108101.SteamVPK.js.in  com.github.kinten108101.SteamVpk.ts  config.ts  const.ts  conversation.ts  create-profile.ts  debug-window.ts  disk-capacity.ts  download-page-present.ts  download-page.ts  (+65 more)
src/actions/: action-builder.ts  add-addon.js  add-addon.ts  addon-details.js  addon-details.ts  addon-storage-controls.js  addon-storage-controls.ts  addons-panel-actions.js  addons-panel-actions.ts  archive-controls.js  archive-controls.ts  headerbox.js  headerbox.ts  injection.js  injection.ts  injector-actions.ts  navigate-to-store-page.js  profile-bar.ts  settings-actions.ts  settings.js  settings.ts  shortcuts.js  shortcuts.ts  stack-controller.js  stack-controller.ts  status-debug-actions.js  status-debug-actions.ts
src/backend/: addons-proxy.ts  api.ts  client.ts  profile-proxy.ts
src/dialogs/: add-addon-name.d.ts  add-addon-name.js  add-addon-name.ts  add-addon-url.ts  allocate.ts  async-signals.ts  file-dialog.ts  message-dialog.ts  window-promiser.ts
src/model/: addon-details-select.ts  addonlist.ts  archive-select.ts  archive-store.ts  archivelist.ts  notification.ts  repository.ts  repositorylist.ts  status-manager.ts
src/presenters/: addon-details-presenter.ts  addon-details-update.ts  addonlist-proxy.ts  download-page-present.ts  download-page-presenter.ts  folder.js  headerbox-interaction.js  inject-button-set-presenter.ts  inject-button-set-restore.ts  inject-console-presenter.ts  launchpad-page-presenter.ts  launchpad-present.ts  notification.ts  notifier.ts  profile-bar-sync-headerbox.ts  repository-proxy.ts  settings.js  settings.ts  static-archive-store-presenter.ts  status-broker.js  status-broker.ts  store-details.js  text-markup-presenter.ts  usage-presenter.js  usage-presenter.ts
src/ui/: activatable-row.ts  addon-details-archive-list.ts  addon-details-leaflet-page.ts  addon-details.ts  addons-panel-disk.ts  addons-panel.ts  download-page.ts  field-row.js  field-row.ts  headerbox.ts  icon-with-badge.js  inject-button-set.ts  launchpad-rows.ts  launchpad.ts  preferences-window.ts  profile-bar.js  profile-bar.ts  sensitizable-widgets.js  shortcut-label.js  shortcut-label.ts  spinning-button.js  spinning-button.ts  store-page.js  swipe-tracker.js  themeselector.js  themeselector.ts
src/utils/: action-builder.ts  action.ts  adw1.ts  async-signals.d.ts  async-signals.js  base64.js  code.ts  const.js  const.ts  decorator.ts  errors.ts  file-dialog.ts  files.js  files.ts  glib1.ts  gtk.js  gtk.ts  gtk1.ts  json1.ts  log.ts  markup.js  markup.ts  message-dialog.ts  result.ts  revealer.ts  sensitivity-semaphore.ts  soup1.ts  spinning-button.ts  toast-builder.ts  toast.ts  ts-helper.d.ts  typed-builder.ts  use-semaphore.ts  window-promiser.ts
src/windows/: about.js  about.ts  debug-window.ts  headerbox-detachable.js  headerbox-detachable.ts  main-window.ts  preferences-window.ts
steamvpk/: com.github.kinten108101.SteamVpk.src.gresource.xml  meson.build
(+46 files in other folders)
