icons = [
  'addon-box.svg',
  'build-alt-symbolic.svg',
  'cloud-disabled-symbolic.svg',
  'cloud-filled-symbolic.svg',
  'cross-filled-symbolic.svg',
  'fingerprint-symbolic.svg',
  'folder-download-symbolic.svg',
  'harddisk-symbolic.svg',
  'left-large-symbolic.svg',
  'map-symbolic.svg',
  'pause-large-symbolic.svg',
  'play-large-symbolic.svg',
  'puzzle-piece-symbolic.svg',
  'refresh-large-symbolic.svg',
  'run-start-symbolic.svg',
  'update-symbolic.svg',
  'warning-symbolic.svg',
]
