icons = [
  'addon-box.svg',
  'arrow2-up-symbolic.svg',
  'build-alt-symbolic.svg',
  'cloud-disabled-symbolic.svg',
  'cloud-filled-symbolic.svg',
  'cross-filled-symbolic.svg',
  'fingerprint-symbolic.svg',
  'folder-download-symbolic.svg',
  'harddisk-symbolic.svg',
  'left-large-symbolic.svg',
  'map-symbolic.svg',
  'pause-large-symbolic.svg',
  'play-large-symbolic.svg',
  'puzzle-piece-symbolic.svg',
  'refresh-large-symbolic.svg',
  'run-start-symbolic.svg',
  'step-out-symbolic.svg',
  'stop-large-symbolic.svg',
  'terminal-symbolic.svg',
  'update-symbolic.svg',
  'user-trash-symbolic.svg',
  'warning-symbolic.svg',
  'wrench-wide-symbolic.svg',
]
