icons = [
  'addon-box.svg',
  'addon-box-devel.svg',
  'arrow2-up-symbolic.svg',
  'background-app-sleepyface-symbolic.svg',
  'build-alt-symbolic.svg',
  'checkmark-symbolic.svg',
  'cloud-disabled-symbolic.svg',
  'cloud-filled-symbolic.svg',
  'cross-filled-symbolic.svg',
  'error-symbolic.svg',
  'fingerprint-symbolic.svg',
  'flash-memory-symbolic.svg',
  'folder-download-symbolic.svg',
  'harddisk-symbolic.svg',
  'left-large-symbolic.svg',
  'map-symbolic.svg',
  'pause-large-symbolic.svg',
  'pip-in-symbolic.svg',
  'pip-out-symbolic.svg',
  'play-large-symbolic.svg',
  'play-symbolic.svg',
  'puzzle-piece-symbolic.svg',
  'question-round-symbolic.svg',
  'refresh-large-symbolic.svg',
  'run-start-symbolic.svg',
  'step-out-symbolic.svg',
  'stop-large-symbolic.svg',
  'stop-symbolic.svg',
  'terminal-symbolic.svg',
  'update-symbolic.svg',
  'user-trash-symbolic.svg',
  'warning-symbolic.svg',
  'wrench-wide-symbolic.svg',
]
