interface = [
  'add-addon-name.blp',
  'add-addon-preview-download.blp',
  'add-addon-url.blp',
  'add-addon.blp',
  'addon-details-context-label.blp',
  'addon-details-lozenge.blp',
  'addon-details-peek-file.blp',
  'addon-details.blp',
  'create-profile.blp',
  'download-page-row.blp',
  'download-page.blp',
  'launchpad-page.blp',
  'launchpad-row.blp',
  'launchpad-section.blp',
  'preferences-window.blp',
  'profile-bar-popover.blp',
  'profile-bar.blp',
  'window.blp',
]

interface_files = files(interface)
