interface = [
  'add-addon-name.blp',
  'add-addon-preview-download.blp',
  'add-addon-url.blp',
  'add-addon.blp',
  'addon-details-context-label.blp',
  'addon-details-lozenge.blp',
  'addon-details-peek-file.blp',
  'addon-details.blp',
  'addons-panel-disk-allocate.blp',
  'addons-panel-disk.blp',
  'addons-panel.blp',
  'create-profile.blp',
  'debug-window.blp',
  'debug-window-action-row.blp',
  'download-page-row.blp',
  'download-page.blp',
  'download-window-row.blp',
  'download-window.blp',
  'field-row.blp',
  'inject-console.blp',
  'launchpad-page.blp',
  'launchpad-row.blp',
  'launchpad-section.blp',
  'navigate-row.blp',
  'preferences-window.blp',
  'profile-bar-popover.blp',
  'profile-bar.blp',
  'profile-window.blp',
  'window.blp',
]

interface_files = files(interface)
